--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,10 @@
+title: PixelTime
+author: PixelTime
+email: PixelTime@vip.qq.com
+baseurl: "" 
+url: https://pixeltimenet.github.io/Introduction/
+github_username: PixelTimeNet
+
+# Build settings
+markdown: kramdown
 theme: jekyll-theme-cayman
