--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: PixelTime
 author: PixelTime
 email: PixelTime@vip.qq.com
 url: https://pixeltimenet.github.io
-baseurl: "/Introduction" 
+baseurl: "/PixelTime-Network" 
 github_username: PixelTimeNet
 
 # Build settings
